src/objects/LoRaWAN_Package__c.object
<CustomObject>
    <description>Represents a ThingPark Order, a subscriber can have multiple orders.</description>
    <fields>
        <fullName>Actility_Offer_Ref__c</fullName>
        <defaultValue>&quot;connexin-vdr/tpw-starter-kit&quot;</defaultValue>
        <label>Actility Offer Ref</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>connexin-vdr/tpw-starter-kit</fullName>
                </value>
                <value>
                    <fullName>connexin-vdr/test-kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actility_Order_ID__c</fullName>
        <label>Actility Order ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Rate__c</fullName>
        <label>Device Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Device_Rate_after_commitment_end__c</fullName>
        <label>Device Rate after commitment end</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>ADDMONTHS( Start_Date__c ,  Term__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoRaWAN_Tenancy__c</fullName>
        <description>The Tenancy this Package is attached to.</description>
        <label>LoRaWAN Tenancy</label>
        <referenceTo>LoRaWAN_Tenancy__c</referenceTo>
        <relationshipLabel>LoRaWAN Package</relationshipLabel>
        <relationshipName>LoRaWAN_Package</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Push_to_Actility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Push Package changes to Actility ThingPark</description>
        <label>Push to Actility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_Of_Devices__c</fullName>
        <label>Quantity Of Devices</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(is_Cancelled__c, &quot;Cancelled&quot;, IF(is_Active__c, &quot;Active&quot;, &quot;Draft&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>length of the commitment in months.</description>
        <label>Term</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The device is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <label>LoRaWAN Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LoRaWAN Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoRaWAN Package</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>After_End_Device_Rate_unchangable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Device_Rate_after_commitment_end__c ) , OR(is_Active__c, is_Cancelled__c))</errorConditionFormula>
        <errorDisplayField>Device_Rate_after_commitment_end__c</errorDisplayField>
        <errorMessage>Create a new Package, do not attempt to edit an existing package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Device_Rate_unchangable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Device_Rate__c ) , OR(is_Active__c, is_Cancelled__c))</errorConditionFormula>
        <errorDisplayField>Device_Rate__c</errorDisplayField>
        <errorMessage>Create a new Package, do not attempt to edit an existing package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Reverse_Activation</fullName>
        <active>true</active>
        <description>Prevents an Active Package being made inactive again, must be decommissioned.</description>
        <errorConditionFormula>AND(is_Active__c == False, NOT(ISNEW()), ISCHANGED(is_Active__c))</errorConditionFormula>
        <errorDisplayField>is_Active__c</errorDisplayField>
        <errorMessage>Package must be made cancelled, should not be reverted to &apos;Draft&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Reverse_Cancellation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(is_Cancelled__c == False, NOT(ISNEW()), ISCHANGED(is_Cancelled__c))</errorConditionFormula>
        <errorDisplayField>is_Cancelled__c</errorDisplayField>
        <errorMessage>You must create a new Package, you should not attempt to reverse previous cancellation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_of_Devices_unchangable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Quantity_Of_Devices__c ) , OR(is_Active__c, is_Cancelled__c))</errorConditionFormula>
        <errorDisplayField>Quantity_Of_Devices__c</errorDisplayField>
        <errorMessage>Create a new Package, do not attempt to edit an existing package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_unchangable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Start_Date__c ) , OR(is_Active__c, is_Cancelled__c))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Create a new Package, do not attempt to edit an existing package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_unchangable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Term__c ) , OR(is_Active__c, is_Cancelled__c))</errorConditionFormula>
        <errorDisplayField>Term__c</errorDisplayField>
        <errorMessage>Create a new Package, do not attempt to edit an existing package.</errorMessage>
    </validationRules>
</CustomObject>